# pygats

./: .gitignore  .pylintrc  .readthedocs.yaml  =2.12  LICENSE  README.md  README.rst  developer-guide.md  pymagic-autogui-test.py  pymagic-autogui.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: docs.yml  pylint.yml  python-find-text.yml  python-package.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/source/: api.rst  conf.py  formatters.rst  index.rst  misc.rst  pygats.rst  recog.rst
src/locales/: find_locale.py
src/locales/eng/: eng.py
src/locales/rus/: rus.py
src/pygats/: __init__.py  boxes.py  formatters.py  misc.py  pygats.py  qat.py  recog.py  search.py  test.py
src/pygats_folder/: recog.py
tests/: conftest.py  pymagic_autogui_test.py  test_formatters.py  test_misc.py  test_pygats.py  test_recog.py
tests/find/: color_gen.py  gen.py  histogram.py  line_chart.py  result.txt  test_find.py  words.txt
